Fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,6 @@
   box-sizing: border-box;
 }
 
-body {
+html {
   overflow-x: hidden;
 }
